--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "next": "13.1.1",
     "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
-    react-select@5.7.0,
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
+    "react-select": "^5.7.0",
     "typescript": "4.9.4"
   }
 }
