--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/favicon.ico"],
   "exclude": ["node_modules"],
 
 }
