--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "auth0-js": "^9.20.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "mongoose": "^6.8.2",
