--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "auth0-js": "^9.20.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "formidable": "^2.1.1",
     "mongoose": "^6.8.2",
     "next": "13.1.1",
     "nextjs-cors": "^2.1.2",
@@ -27,6 +28,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-select": "^5.7.0",
+    "superagent": "^8.0.6",
     "typescript": "4.9.4"
   }
 }
