--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.1.1",
     "formidable": "^2.1.1",
     "mongoose": "^6.8.2",
+    "mongoose-unique-validator": "^3.1.0",
     "next": "13.1.1",
     "nextjs-cors": "^2.1.2",
     "nodemailer": "^6.8.0",
