--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@types/react-dom": "18.0.10",
     "auth0-js": "^9.20.0",
     "axios": "^1.2.2",
+    "boostrap": "^2.0.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "formidable": "^2.1.1",
     "mongoose": "^6.8.2",
     "mongoose-unique-validator": "^3.1.0",
     "next": "13.1.1",
+    "next-cloudinary": "^1.11.0",
     "nextjs-cors": "^2.1.2",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
@@ -33,6 +35,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-select": "^5.7.0",
+    "reactstrap": "^9.1.5",
     "superagent": "^8.0.6",
     "typescript": "4.9.4"
   }
